product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: ponmalar/product
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 8080
