productingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: rl-by-ip
spec:
  rules:
    - http:
        paths:
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 80
